created placeholders for about, help pages

--- a/client/src/app/views/pages/pages-about/pages-about.page.html
+++ b/client/src/app/views/pages/pages-about/pages-about.page.html
@@ -2,7 +2,7 @@
 
   <!--title-->
   <nz-page-header-title>
-    Contact
+    About CIViC
   </nz-page-header-title>
 
   <!--content-->
@@ -17,26 +17,24 @@
               *nzSpaceItem>
               <nz-col [nzSpan]="8">
                 <nz-card nzType="inner"
-                  nzTitle="News and Updates"
+                  nzTitle="Mission Statement"
                   style="width: 100%">
-                  Please follow our twitter account <a href="https://twitter.com/CIViCdb"
-                    target="_blank">@CIVICdb</a>.
+                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="8">
                 <nz-card nzType="inner"
-                  nzTitle="General Inquiries"
+                  nzTitle="Affiliations"
                   style="width: 100%">
-                  Please email <a href="mailto:help@civicdb.org"
-                    target="_blank">help@civicdb.org</a>.
+                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="8">
                 <nz-card nzType="inner"
-                  nzTitle="Bug Reports and Feature Requests"
+                  nzTitle="Funding"
                   style="width: 100%">
-                  Please create an issue in the <a href="https://github.com/griffithlab/civic-v2/issues"
-                    target="_blank">civic-v2 GitHub repo</a>.
+                  <p>Nam in odio vitae massa hendrerit congue nec ut ante. Integer non felis eu dui posuere finibus et eu tellus. Morbi magna ligula, commodo ac odio nec, consectetur commodo augue. Integer mattis in tellus et pulvinar. Vivamus porta finibus mauris eu suscipit.</p>
+
                 </nz-card>
               </nz-col>
             </nz-row>
