--- a/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.html
+++ b/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.html
@@ -2,7 +2,7 @@
   <input type="text"
     nz-input
     [placeholder]="placeholderText ? placeholderText : ''"
-    [(ngModel)]="inputVal"
+    [(ngModel)]="inputModel"
     (ngModelChange)="onModelUpdated()" />
 </nz-input-group>
 <ng-template #clearTmpl>
@@ -10,6 +10,6 @@
     class="ant-input-clear-icon"
     nzTheme="fill"
     nzType="close-circle"
-    *ngIf="inputVal"
-    (click)="inputVal = undefined; onModelUpdated()"></i>
+    *ngIf="inputModel"
+    (click)="inputModel = undefined; onModelUpdated()"></i>
 </ng-template>
