Hook up assertion revise form

--- a/client/src/app/views/assertions/assertions-revise/assertion-suggest/assertion-suggest.page.html
+++ b/client/src/app/views/assertions/assertions-revise/assertion-suggest/assertion-suggest.page.html
@@ -1,3 +1,2 @@
-<cvc-assertion-revise-form>
+<cvc-assertion-revise-form [assertionId]="assertionId">
 </cvc-assertion-revise-form>
-<ng-template #loadingEvidence>Loading Evidence...</ng-template>
