--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -70,7 +70,7 @@
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="NCCN Guideline">
-          {{ assertion.nccnGuideline | ifEmpty: "--" }}
+          {{ assertion.nccnGuideline?.name | ifEmpty: "--" }}
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="Variant Origin">
