--- a/client/src/app/forms/assertion-revise/assertion-revise.form.html
+++ b/client/src/app/forms/assertion-revise/assertion-revise.form.html
@@ -1,5 +1,6 @@
-<nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
+<nz-spin [nzSpinning]="this.loading">
   <form nz-form
+    *ngIf="formModel"
     [formGroup]="formGroup"
     (ngSubmit)="reviseAssertion(formModel)"
     nzLayout="vertical">
