--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
@@ -34,96 +34,17 @@
                 <nz-row>
                   <p nz-typography><b>Description: </b>{{ organization.description }}</p>
                 </nz-row>
-                <nz-row>
-                  <p nz-typography><b>Organization Statistics <span *ngIf="organization.subGroups.length > 0">(Excl. Child Organizations)</span></b></p>
+                <nz-row *ngIf="organization.subGroups.length == 0; else hasSubGroups" >
+                  <cvc-stats-card [stats]="organization.orgStatsHash" header="Organization Statistics"></cvc-stats-card>
                 </nz-row>
-                <nz-row [nzGutter]="16">
-                  <nz-col [nzSpan]="2">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.comments | number)!" [nzTitle]="'Comments'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.revisions | number)!" [nzTitle]="'Suggested Revisions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.appliedRevisions | number)!" [nzTitle]="'Applied Revisions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.suggestedSources | number)!" [nzTitle]="'Suggested Sources'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.submittedEvidenceItems | number)!" [nzTitle]="'Submitted Evidence'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.acceptedEvidenceItems | number)!" [nzTitle]="'Accepted Evidence'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.submittedAssertions | number)!" [nzTitle]="'Submitted Assertions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgStatsHash.acceptedAssertions | number)!" [nzTitle]="'Accepted Assertions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                </nz-row>
-                <nz-row>
-                  <p nz-typography *ngIf="organization.subGroups.length > 0"><b>Organization Statistics (Incl. Child Organizations)</b></p>
-                </nz-row>
-                <nz-row  *ngIf="organization.subGroups.length > 0" [nzGutter]="16">
-                  <nz-col [nzSpan]="2">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.comments | number)!" [nzTitle]="'Comments'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.revisions | number)!" [nzTitle]="'Suggested Revisions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.appliedRevisions | number)!" [nzTitle]="'Applied Revisions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.suggestedSources | number)!" [nzTitle]="'Suggested Sources'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.submittedEvidenceItems | number)!" [nzTitle]="'Submitted Evidence'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.acceptedEvidenceItems | number)!" [nzTitle]="'Accepted Evidence'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.submittedAssertions | number)!" [nzTitle]="'Submitted Assertions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                  <nz-col [nzSpan]="3">
-                    <nz-card>
-                      <nz-statistic [nzValue]="(organization.orgAndSuborgsStatsHash.acceptedAssertions | number)!" [nzTitle]="'Accepted Assertions'"></nz-statistic>
-                    </nz-card>
-                  </nz-col>
-                </nz-row>
+                <ng-template #hasSubGroups>
+                  <nz-row>
+                    <cvc-stats-card [stats]="organization.orgStatsHash" header="Organization Statistics (Excl. Child Organizations)"></cvc-stats-card>
+                  </nz-row>
+                  <nz-row>
+                    <cvc-stats-card [stats]="organization.orgAndSuborgsStatsHash" header="Organization Statistics (Incl. Child Organizations)"></cvc-stats-card>
+                  </nz-row>
+                </ng-template>
               </nz-col>
               <nz-col [nzSpan]="4">
                 <nz-list *ngIf="organization.subGroups.length > 0" nzBordered nzSize="small">
