--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -121,8 +121,7 @@
         </div>
         <div nz-row>
           <div nz-col
-            [nzSpan]="21"
-            [nzOffset]="3">
+            [nzSpan]="24">
             <nz-divider></nz-divider>
             <cvc-stats-card [stats]="user.statsHash" header="User Statistics"></cvc-stats-card>
           </div>
