--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
@@ -24,56 +24,7 @@
     <nz-page-header-content>
       <cvc-tab-navigation [tabs]="tabs"></cvc-tab-navigation>
       <div class="content">
-        <nz-row
-          [nzGutter]="16">
-          <nz-col
-            [nzSpan]="3">
-            <nz-space nzDirection="vertical"
-              nzSize="middle">
-              <nz-avatar *ngIf="organization.profileImagePath; else noAvatar"
-                nz-comment-avatar
-                [nzSrc]="organization.profileImagePath"
-                [nzSize]="128">
-              </nz-avatar>
-              <ng-template #noAvatar>
-                <nz-avatar nz-comment-avatar [nzSize]="128"
-                  [nzText]="organization.name"></nz-avatar>
-              </ng-template>
-            </nz-space>
-          </nz-col>
-          <nz-col [nzSpan]='13'>
-            <nz-descriptions nzBordered nzLayout="vertical">
-              <nz-descriptions-item [nzSpan]="2"
-                nzTitle="Description">
-                {{ organization.description }}
-              </nz-descriptions-item>
-            </nz-descriptions>
-          </nz-col>
-          <nz-col [nzSpan]="8" *ngIf="organization.subGroups.length >= 0">
-            <nz-descriptions nzBordered nzLayout="vertical">
-              <nz-descriptions-item
-                nzTitle="Child Organizations">
-                <ng-container *ngFor="let suborg of organization.subGroups">
-                    <cvc-organization-tag [org]="suborg"></cvc-organization-tag>
-                </ng-container>
-              </nz-descriptions-item>
-            </nz-descriptions>
-          </nz-col>
-        </nz-row>
-        <nz-row>
-          <nz-col
-            [nzSpan]="24">
-            <nz-divider></nz-divider>
-              <cvc-stats-card *ngIf="organization.subGroups.length == 0; else hasSubGroups"
-                [stats]="organization.orgStatsHash"
-                header="Organization Statistics">
-              </cvc-stats-card>
-            <ng-template #hasSubGroups>
-              <cvc-stats-card [stats]="organization.orgStatsHash" header="Organization Statistics (Excl. Child Organizations)"></cvc-stats-card>
-              <cvc-stats-card [stats]="organization.orgAndSuborgsStatsHash" header="Organization Statistics (Incl. Child Organizations)"></cvc-stats-card>
-            </ng-template>
-          </nz-col>
-        </nz-row>
+        <cvc-organization-card [organization]="organization" [inCard]="false"></cvc-organization-card>
 
         <router-outlet></router-outlet>
       </div>
