use timeago pipe and fix name sorting on org table

--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -55,7 +55,7 @@
         {{ organization.eventCount }}
       </td>
       <td>
-        {{ organization.mostRecentEvent?.createdAt }}
+        {{ organization.mostRecentEvent?.createdAt | timeago }}
       </td>
     </tr>
   </tbody>
