admin link is a regular link, not an internal route

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li nz-menu-item *ngIf="viewer.isAdmin">
-            <a routerLink="/admin">
+            <a href="/admin">
               Admin Console
             </a>
           </li>
