rename users to contributors on sidebar nav

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -211,7 +211,7 @@
             nzMatchRouter>
             <i nz-icon
               nzType="civic-curator"></i>
-            <span> <a routerLink="/users" id="main-users">Users</a> </span>
+            <span> <a routerLink="/users" id="main-users">Contributors</a> </span>
           </li>
 
           <li nz-menu-item
