--- a/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
+++ b/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
@@ -68,5 +68,16 @@
         {{ p.assertionCount }}
       </td>
     </tr>
+    <!-- Load More button row -->
+    <ng-container *ngrxLet="pageInfo$ as pageInfo">
+      <tr *ngIf="pageInfo.hasNextPage">
+        <td colspan="7">
+          <button *ngIf="pageInfo.hasNextPage"
+            (click)="loadMore(pageInfo.endCursor)"
+            nz-button
+            nzBlock>Load More</button>
+        </td>
+      </tr>
+    </ng-container>
   </tbody>
 </nz-table>
