--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -58,10 +58,16 @@
         {{ t.variantCount }}
       </td>
     </tr>
+    <!-- Load More button row -->
+    <ng-container *ngrxLet="pageInfo$ as pageInfo">
+      <tr *ngIf="pageInfo.hasNextPage">
+        <td colspan="7">
+          <button *ngIf="pageInfo.hasNextPage"
+            (click)="loadMore(pageInfo.endCursor)"
+            nz-button
+            nzBlock>Load More</button>
+        </td>
+      </tr>
+    </ng-container>
   </tbody>
 </nz-table>
-<ng-container *ngrxLet="pageInfo$ as pageInfo">
-  <button *ngIf="pageInfo.hasNextPage"
-    nz-button
-    (click)="loadMore(pageInfo.endCursor)">Load More</button>
-</ng-container>
