--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -168,6 +168,17 @@
         <td nzRight>{{variant.evidenceItemCount}}</td>
         <td nzRight>{{variant.assertionCount}}</td>
       </tr>
+      <!-- Load More button row -->
+      <ng-container *ngrxLet="pageInfo$ as pageInfo">
+        <tr *ngIf="pageInfo.hasNextPage">
+          <td colspan="7">
+            <button *ngIf="pageInfo.hasNextPage"
+              (click)="loadMore(pageInfo.endCursor)"
+              nz-button
+              nzBlock>Load More</button>
+          </td>
+        </tr>
+      </ng-container>
     </tbody>
   </nz-table>
 </ng-container>
