acount for the fact that N/A variant type has no url. closes #365

--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -6,7 +6,7 @@
         nzType="civic:varianttype"></i> {{ variantType.name }}
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag [href]="variantType.url"
+      <cvc-link-tag *ngIf="variantType.url" [href]="variantType.url"
         tooltip="View on sequenceontology.org">
         {{ variantType.soid }}
       </cvc-link-tag>
