hide form in favor of success banner on successful submit. closes #358

--- a/client/src/app/forms/assertion-submit/assertion-submit.form.html
+++ b/client/src/app/forms/assertion-submit/assertion-submit.form.html
@@ -5,13 +5,12 @@
     nzLayout="vertical">
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form [form]="formGroup"
+    <formly-form *ngIf="!this.success" [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
       [options]="formOptions"
       (modelChange)="formModel = $event"></formly-form>
 
-    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
   </form>
 
   <ng-template #formMessages>
