--- a/client/src/app/forms/evidence-revise/evidence-revise.form.html
+++ b/client/src/app/forms/evidence-revise/evidence-revise.form.html
@@ -6,14 +6,13 @@
 
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form [form]="formGroup"
+    <formly-form *ngIf="!this.success" [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
       [options]="formOptions"
       (modelChange)="formModel = $event">
     </formly-form>
 
-    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
   </form>
 </nz-spin>
 
@@ -35,17 +34,3 @@
     </ng-template>
   </ng-container>
 </ng-template>
-<!-- <div nz-row>
-     <div nz-col
-     nzSpan="12">
-     <h4>formModel</h4>
-     <p>To speed up form updates, comment out or remove this formModel debug block.</p>
-     <ngx-json-viewer *ngIf="formModel"
-     [json]="formModel"></ngx-json-viewer>
-     </div>
-     <div nz-col
-     nzSpan="12">
-     <ngx-json-viewer *ngIf="formGroup"
-     [json]="formGroup.value"></ngx-json-viewer>
-     </div>
-     </div> -->
