--- a/client/src/app/forms/source-submit/source-submit.form.html
+++ b/client/src/app/forms/source-submit/source-submit.form.html
@@ -6,13 +6,11 @@
     nzLayout="vertical">
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form [form]="formGroup"
+    <formly-form *ngIf="!this.success" [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
       [options]="formOptions"
       (modelChange)="formModel = $event"></formly-form>
-
-    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
   </form>
 
   <ng-template #formMessages>
@@ -36,11 +34,3 @@
     </ng-container>
   </ng-template>
 </nz-spin>
-
-<!-- <div nz-row>
-     <div nz-col
-     nzSpan="24">
-     <ngx-json-viewer *ngIf="formModel"
-     [json]="formModel"></ngx-json-viewer>
-     </div>
-     </div> -->
